--- a/index.html
+++ b/index.html
@@ -1,23 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="rtl">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
-    <script type="text-javascript">
-      if (
-        localStorage.theme === "dark" ||
-        (!("theme" in localStorage) &&
-          window.matchMedia("(prefers-color-scheme: dark)").matches)
-      ) {
-        document.documentElement.classList.add("dark");
-      } else {
-        document.documentElement.classList.remove("dark");
-      }
-    </script>
   </head>
-  <body dir="rtl" class="dark:bg-darkPrimary-800">
+  <body class="bg-lightPrimary dark:bg-darkPrimary">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
