Make Collapse Navbar setting

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
   </head>
-  <body class="bg-lightPrimary dark:bg-darkPrimary">
+  <body class="bg-lightPrimary dark:bg-darkPrimary font-roboto-regular">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
